[package]
name = "artifact-worker"
version = "0.1.0"
edition = "2021"
description = "Turn MCP servers, APIs, specs, docs, and workflow artifacts into narrowly scoped iii workers."
license = "MIT"
repository = "https://github.com/iii-experimental/artifact-worker"

[lib]
name = "artifact_worker"
path = "src/lib.rs"

[[bin]]
name = "artifact-worker"
path = "src/bin/artifact-worker.rs"

[[bin]]
name = "artifact"
path = "src/bin/artifact.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
iii-sdk = "0.11.6"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
